The final adapted version

--- a/src/index.html
+++ b/src/index.html
@@ -37,23 +37,31 @@
         <div class="gamers">
             <h3 class="title-3 title-3_gamers">TOP 3 PLAYERS</h3>
 
-            <img src="./img/section_header/header_liza-frolova.svg" alt="avatar" class="gamers__img">
-            <div class="gamers__text">
-                <h3 class="title-3 title-3_gamer">Лиза Фролова</h3>
-                <p class="gamers__scope">score 2253</p>
+            <div class="gamers__box">
+                <img src="./img/section_header/header_liza-frolova.svg" alt="avatar" class="gamers__img">
+                <div class="gamers__text">
+                    <h3 class="title-3 title-3_gamer">Лиза Фролова</h3>
+                    <p class="gamers__scope">score 2253</p>
+                </div>
             </div>
 
-            <img src="./img/section_header/header_andrey-stepanov.svg" alt="avatar" class="gamers__img">
-            <div class="gamers__text">
-                <h3 class="title-3 title-3_gamer">Андрей Степанов</h3>
-                <p class="gamers__scope">score 2953</p>
+            <div class="gamers__box">
+                <img src="./img/section_header/header_andrey-stepanov.svg" alt="avatar" class="gamers__img">
+                <div class="gamers__text">
+                    <h3 class="title-3 title-3_gamer">Андрей Степанов</h3>
+                    <p class="gamers__scope">score 2953</p>
+                </div>
             </div>
 
-            <img src="./img/section_header/header_ivan-saveliev.svg" alt="avatar" class="gamers__img">
-            <div class="gamers__text">
-                <h3 class="title-3 title-3_gamer">Иван Савельев</h3>
-                <p class="gamers__scope">score 2453</p>
+            <div class="gamers__box">
+                <img src="./img/section_header/header_ivan-saveliev.svg" alt="avatar" class="gamers__img">
+                <div class="gamers__text">
+                    <h3 class="title-3 title-3_gamer">Иван Савельев</h3>
+                    <p class="gamers__scope">score 2453</p>
+                </div>
             </div>
+
+
         </div>
 
         <div class="features">
